# SearchGPT

./: .gitignore  README.md  README_UI_RUN.md  TODO.md  phase.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: debug_routes.py  routes.py
app/core/: config.py  llm.py
app/services/: chat_service.py  embedding_service.py  file_service.py  pdf_service.py  rag_service.py  url_service.py  vector_service.py
frontend/: index.html  script.js
