[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu==1.8.0",
    "fastapi==0.115.0",
    "google-generativeai==0.7.2",
    "httpx==0.27.2",
    "numpy==1.26.4",
    "pydantic==2.8.2",
    "pypdf==5.1.0",
    "pytest==8.2.2",
    "python-dotenv==1.0.1",
    "sentence-transformers==3.0.1",
    "uvicorn==0.30.6",
]
